--- a/Exercises/Exercise 10/10.4/index.html
+++ b/Exercises/Exercise 10/10.4/index.html
@@ -1,40 +1,27 @@
 <!DOCTYPE html>
-<head>
-    <title>
-        Products
-    </title>
-</head>
+<html>
+  <head>
+    <title>Products</title>
+  </head>
 
-<body>
+  <body>
     <div>
-        <h1>
-            Monkey
-        </h1>
-        <p>
-            A tasty primate.
-        </p>
-        <p><b>$10</b></p>
-        <img src="./monkey.jpg" style="max-width: 10%"/>
+      <h1>Monkey</h1>
+      <p>A tasty primate.</p>
+      <p><b>$10</b></p>
+      <img src="./monkey.jpg" style="max-width: 10%" />
     </div>
     <div>
-        <h1>
-            Dog
-        </h1>
-        <p>
-            A tasty canine.
-        </p>
-        <p><b>$2</b></p>
-        <img src="./dog.jpg" style="max-width: 10%"/>
+      <h1>Dog</h1>
+      <p>A tasty canine.</p>
+      <p><b>$2</b></p>
+      <img src="./dog.jpg" style="max-width: 10%" />
     </div>
     <div>
-        <h1>
-            Cat
-        </h1>
-        <p>
-            A tasty feline.
-        </p>
-        <p><b>$20</b></p>
-        <img src="./cat.jpg" style="max-width: 10%"/>
+      <h1>Cat</h1>
+      <p>A tasty feline.</p>
+      <p><b>$20</b></p>
+      <img src="./cat.jpg" style="max-width: 10%" />
     </div>
-</body>
+  </body>
 </html>
